override navbar defaults to fix color & spacing

--- a/frontend/sass/laletterbuilder/_navbar-overrides.scss
+++ b/frontend/sass/laletterbuilder/_navbar-overrides.scss
@@ -58,6 +58,16 @@ nav.navbar {
     min-width: 150px;
   }
 
+  .navbar-item,
+  .navbar-link {
+    color: $primary;
+    height: 100%;
+  }
+
+  .navbar-link::after {
+    border-color: $primary;
+  }
+
   //OVERRIDES FROM DEFAULT NAVBAR STYLING
   .container {
     max-width: unset;
